Fix menu flickering from isAdmin

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,3 +9,27 @@ body {
     --radius: 0.5rem;
   }
 }
+
+.skeleton {
+  position: relative;
+  overflow: hidden;
+  border-radius: 0.25rem;
+  margin-bottom: 0.625rem;
+  width: 100%;
+  height: 34px;
+}
+.skeleton-inner {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  animation: shimmer 1.5s infinite;
+  transform: translate(-100%, 0) rotate(0) skewX(0) skewY(0) scaleX(1) scaleY(1);
+}
+
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
+  }
+}
